--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
 
-    <!-- Bagian Header -->
+    <!--  Header -->
 <header class="header">
     <div class="container">
         <div class="left">
