--- a/page2.html
+++ b/page2.html
@@ -73,7 +73,7 @@
           </div>
         </form>
         
-        <!-- Tombol Kembali ke Halaman Utama (Home) -->
+        <!-- Tombol Kembali ke Halaman Utama  -->
         <div class="buttonBack">
             <a href="index.html" class="back-button">Back</a>
         </div>
