--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>   
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -73,13 +72,17 @@
           </div>
         </form>
         
-        <!-- Button Kembali ke Halaman Utama  -->
+        <!-- Tombol Kembali ke Halaman Utama -->
         <div class="buttonBack">
             <a href="index.html" class="back-button">Back</a>
         </div>
       </div>
     </div>
   </div>
+
+
+
+ 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
